updated api doc and added some documentation
